styles/global.css
/* 
  Lesson Content
*/

.lesson-content h1 {
  @apply mt-2 block text-3xl text-center leading-8 font-extrabold tracking-tight text-gray-900;
}

/* 
  Modal for screenshots
*/

#modal {
  display: none;
  position: fixed;
  z-index: 99;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.5);
}

/* Modal Content/Box */
.modal-content {
  background-color: white;
  margin: 20px auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 35px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

/* 
  Removes backticks `` from being redered
  for inline code in markdown files
*/
.prose code::before,
.prose code::after {
  content: "";
}

.lesson-content img {
  cursor: pointer;
}

/* 
  Doc Search
*/

input[type="search"]:focus {
  --tw-ring-color: none;
}

/* 
  Lesson Page Sidebar
*/

.pro-sidebar {
  width: 100% !important;
}

.pro-sidebar .pro-arrow-wrapper {
  display: none;
}

.pro-sidebar > .pro-sidebar-inner {
  background: #ffffff !important;
}

.pro-sidebar .pro-sub-menu.open {
  color: #007780 !important;
}

.pro-sidebar .pro-sub-menu.open a {
  color: #007780 !important;
  background: #f3f4fa;
  border-radius: 40px;
  padding: 20px 10px;
}

